[gd_scene load_steps=2 format=3 uid="uid://cqtb7c7kaj04h"]

[ext_resource type="Script" uid="uid://8ovmwirkon8c" path="res://cs/tests/卡牌相关/初始化手牌/InitialHandTest.gd" id="1_test_script"]

[node name="InitialHandTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "初始化手牌测试 - 红桃3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "准备创建红桃3卡片..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CardContainer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CreateButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "重新创建红桃3"
